# myx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  warm-cache-add.2026-03-18.json
cli/: README.md
crates/adapter-export-mcp/: Cargo.toml
crates/adapter-export-mcp/src/: lib.rs
crates/adapter-export-openai/: Cargo.toml
crates/adapter-export-openai/src/: lib.rs
crates/adapter-export-skill/: Cargo.toml
crates/adapter-export-skill/src/: lib.rs
crates/adapter-import-openai/: Cargo.toml
crates/adapter-import-openai/src/: lib.rs
crates/adapter-import-skill/: Cargo.toml
crates/adapter-import-skill/src/: lib.rs
crates/myx-cli/: Cargo.toml
crates/myx-cli/src/: cli.rs  exit.rs  export.rs  main.rs  non_interactive.rs  util.rs
crates/myx-cli/src/commands/: add.rs  build.rs  init.rs  inspect.rs  mod.rs  run.rs
crates/myx-cli/tests/: init_json.rs  run_command.rs
crates/myx-core/: Cargo.toml
crates/myx-core/src/: lib.rs
crates/myx-lockfile/: Cargo.toml
crates/myx-lockfile/src/: lib.rs
crates/myx-policy/: Cargo.toml
crates/myx-policy/src/: lib.rs
crates/myx-resolver/: Cargo.toml
crates/myx-resolver/src/: lib.rs
crates/myx-runtime-executor/: Cargo.toml
crates/myx-runtime-executor/src/: lib.rs
crates/myx-runtime-executor/tests/: mcp_runner_e2e.rs
crates/myx-store/: Cargo.toml
crates/myx-store/src/: lib.rs
docs/: adapters.md  architecture.md  capability-ir.md  overview.md  permissions.md  registry.md  release.md  repository-structure.md  roadmap.md  spec-workplan.md  vision.md
docs/audits/: 2026-03-mvp-hardening-audit.md
examples/github-capability/: capability.json  myx.yaml
examples/github-capability/adapters/skill/: SKILL.md
examples/github-capability/prompts/: system.md
examples/github-capability/tools/: schema.json
examples/smoke-capability/: capability.json  myx.yaml
registry/: README.md
rfcs/: 0001-capability-ir.md  0002-package-format.md  0003-adapter-interface.md  0004-cli-contract.md  0005-post-mvp-expansion.md  0006-mvp-alignment-overview.md  0007-runtime-executor-spec.md  0008-policy-enforcement-spec.md  0009-run-command-spec.md  0010-capability-profile-v1-spec.md  0011-lockfile-spec.md  0012-static-index-spec.md  0013-mvp-green-checklist.md
schemas/capability-profile/v1/: schema.json
schemas/index/v1/: schema.json
schemas/loss-report/v1/: schema.json
scripts/: benchmark-warm-cache-add.sh  check-mvp-contract.sh  create-mvp-hardening-project-and-issues.sh  smoke-mvp-loop.sh
scripts/release/: package-dist.sh  render-homebrew-formula.sh
