[package]
name = "myx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "myx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
myx-core = { path = "../myx-core" }
myx-lockfile = { path = "../myx-lockfile" }
myx-policy = { path = "../myx-policy" }
myx-resolver = { path = "../myx-resolver" }
myx-runtime-executor = { path = "../myx-runtime-executor" }
myx-store = { path = "../myx-store" }
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
