[package]
name = "myx-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
myx-core = { path = "../myx-core" }
ureq.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
